--- a/docs/examples/tomography/old_notebooks/projection_tomography.ipynb
+++ b/docs/examples/tomography/old_notebooks/projection_tomography.ipynb
@@ -252,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Chromatix",
+   "display_name": "chromatix",
    "language": "python",
    "name": "chromatix"
   },
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
